--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,7 @@
           </p>
         </section>
       </section>
-      <section class="about-me-paragraph">
+      <section class="about-me-paragraphs">
         <p>
           Growing up, I have always been captivated with creating projects with
           my hands. Puzzles, K'nex building sets, and the like caught my
@@ -60,9 +60,13 @@
         </p>
         <p>
           One of my favorite projects is a Rocket League Statistics web
-          application that took the replays of professional Rocket League and
-          collegiate Rocket League and complied them into a readable table for
-          users to compare various statistics their favorite players and teams.
+          application which complied data from professional and collegiate
+          Rocket League matches using the ballchasing API and complied them into
+          a readable table for users to search their favorite players and teams
+          and compare various statistics. We were able to authenticate users and
+          allow them to favorite players and teams and pool them into a list.
+          Player and teams also had pop-up info cards that held their
+          nationality and team history.
         </p>
         <p>
           Another project that I thoroughly enjoyed was Ancient Path Adventures
@@ -74,6 +78,17 @@
           their own after paying a subscription to use APA's services. Students
           could join classes thorugh a unique access code that was randomly
           generated upon class created.
+        </p>
+        <p>
+          Outside of my technical skills, I enjoy dabbling in other creative
+          aspects. Being a former percussionist, I try to maintain and grow my
+          playing skills by performing with the nearby church or some rudimental
+          drumming. I've also been trying to develop my ear and do some
+          composition on the side. Cooking helps me connect with my Vietnamese
+          heritage and is something that I want to share with my friends and
+          future family. The newest of the them is 3D rendering, where I've
+          followed the Blender Guru's tutorial on a donut animation and I plan
+          on bringing places I've been into the digital world.
         </p>
       </section>
     </main>
